<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark_theme_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/dark_theme_toolbar"
        />

    <TextView
        android:id="@+id/whatsapp_logo_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:text="@string/toolbar_logo_name"
        android:layout_margin="12dp"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/more_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        android:src="@drawable/more_vector"
        android:layout_margin="10dp"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintEnd_toStartOf="@id/more_menu"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        android:src="@drawable/search_vector"
        android:layout_margin="15dp"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/top_tab_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/dark_theme_toolbar"
        app:tabTextColor="@color/gray"
        app:tabIndicatorColor="@color/wpp_green"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="@color/wpp_green">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_top_tab"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sec_top_tab"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trd_top_tab"
            />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bottom_floating_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/open_new_chat_vector"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="17dp"
        android:backgroundTint="@color/wpp_green"
        android:elevation="10dp"
        android:contentDescription="@string/float_btn_desc"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/top_tab_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="90dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>