<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_container"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chat_perfil_photo"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:src="@drawable/photo_replacer"
            app:layout_constraintTop_toTopOf="@id/chat_container"
            app:layout_constraintStart_toStartOf="@id/chat_container"
            app:layout_constraintBottom_toBottomOf="@id/chat_container"
            />

        <TextView
            android:id="@+id/chat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/chat_container"
            app:layout_constraintStart_toEndOf="@id/chat_perfil_photo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/chat_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/last_message_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/chat_title"
            app:layout_constraintEnd_toEndOf="@id/chat_container"
            android:text="@string/chat_datetime"
            android:layout_marginEnd="10dp"
            android:textSize="12sp"
            android:textColor="@color/gray"
            />

        <TextView
            android:id="@+id/last_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/chat_perfil_photo"
            app:layout_constraintBottom_toBottomOf="@id/chat_container"
            android:text="@string/chat_last_message"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/gray"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>